--- a/index.html
+++ b/index.html
@@ -39,6 +39,11 @@
 <p><img src="https://cloud.githubusercontent.com/assets/1247388/18693510/77f596c4-7fa2-11e6-92d4-ed903a6e2412.PNG" alt="xml-linter"></p>
 
 <h2>
+<a id="install" class="anchor" href="#usage" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Install</h2>
+
+<p>Available here and on <a href="https://packagist.org/packages/mickaelandrieu/xml-linter">packagist</a></p>
+
+<h2>
 <a id="usage" class="anchor" href="#usage" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Usage</h2>
 
 <p><img src="https://cloud.githubusercontent.com/assets/1247388/18693553/da1b82d2-7fa2-11e6-8633-88e8559c27ae.PNG" alt="xml-linter-use"></p>
